--- a/public/admin.html
+++ b/public/admin.html
@@ -5,154 +5,155 @@
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>PANEL ADMIN</title>
 <style>
-  :root{
-    --bg1:#4b0082; --bg2:#000000; --particle:#c7b3ff;
-    --card:#1c1433f0; --edge1:rgba(174,143,255,.16); --edge2:rgba(255,255,255,.55);
-    --text:#ffffff; --muted:#c9c0f2; --btn-bg:#1e1935;
-    --neonA:#b985ff; --neonB:#efe6ff; --pulse:#7f5cff;
-  }
-  html,body{
-    height:100%;margin:0;color:var(--text);
-    font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial;
-    background:radial-gradient(circle at 30% -10%,var(--bg1),var(--bg2));
-    overflow:auto;
-  }
-  canvas{position:fixed;inset:0;width:100%;height:100%;z-index:0}
-  .shell{position:relative;z-index:2;max-width:760px;margin:4px auto 32px;padding:0 14px}
-  .logo-wrap{display:flex;justify-content:center}
-  .logo{width:240px;display:block;filter:drop-shadow(0 6px 18px rgba(115,90,255,.35));margin:10px auto -36px;}
+  :root{
+    --bg1:#4b0082; --bg2:#000000; --particle:#c7b3ff;
+    --card:#1c1433f0; --edge1:rgba(174,143,255,.16); --edge2:rgba(255,255,255,.55);
+    --text:#ffffff; --muted:#c9c0f2; --btn-bg:#1e1935;
+    --neonA:#b985ff; --neonB:#efe6ff; --pulse:#7f5cff;
+  }
+  html,body{
+    height:100%;margin:0;color:var(--text);
+    font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial;
+    background:radial-gradient(circle at 30% -10%,var(--bg1),var(--bg2));
+    overflow:auto;
+  }
+  canvas{position:fixed;inset:0;width:100%;height:100%;z-index:0}
+  .shell{position:relative;z-index:2;max-width:760px;margin:4px auto 32px;padding:0 14px}
+  .logo-wrap{display:flex;justify-content:center}
+  .logo{width:240px;display:block;filter:drop-shadow(0 6px 18px rgba(115,90,255,.35));margin:10px auto -36px;}
 
-  .card,.card-mini{
-    position:relative;z-index:1;margin:0 auto;
-    background:linear-gradient(var(--card),var(--card)) padding-box,
-               linear-gradient(145deg,var(--edge1),var(--edge2),var(--edge1)) border-box;
-    border:1px solid transparent;border-radius:20px;
-    box-shadow:0 12px 40px rgba(0,0,0,.45);
-  }
-  .card-inner{padding:16px 14px}
-  .mini-inner{padding:14px 14px}
-  h1{text-align:center;margin:2px 0 8px;font-size:24px;letter-spacing:.4px}
-  p,small{color:var(--muted);text-align:center;margin:0}
+  .card,.card-mini{
+    position:relative;z-index:1;margin:0 auto;
+    background:linear-gradient(var(--card),var(--card)) padding-box,
+               linear-gradient(145deg,var(--edge1),var(--edge2),var(--edge1)) border-box;
+    border:1px solid transparent;border-radius:20px;
+    box-shadow:0 12px 40px rgba(0,0,0,.45);
+  }
+  .card-inner{padding:16px 14px}
+  .mini-inner{padding:14px 14px}
+  h1{text-align:center;margin:2px 0 8px;font-size:24px;letter-spacing:.4px}
+  p,small{color:var(--muted);text-align:center;margin:0}
 
-  .row{display:flex;gap:8px;margin:8px 0;flex-wrap:wrap}
-  input[type=text],input[type=number]{
-    flex:1;background:#2b2250;border:1px solid rgba(180,140,255,.35);
-    border-radius:12px;padding:10px 12px;color:#fff;outline:none;
-  }
-  input::placeholder{color:#9a8ccc}
+  .row{display:flex;gap:8px;margin:8px 0;flex-wrap:wrap}
+  input[type=text],input[type=number]{
+    flex:1;background:#2b2250;border:1px solid rgba(180,140,255,.35);
+    border-radius:12px;padding:10px 12px;color:#fff;outline:none;
+  }
+  input::placeholder{color:#9a8ccc}
 
-  /* Campos nombre + url */
-  .item{ /* Usamos display flex y gap directamente para evitar conflictos con .row */
-    display:flex;gap:8px;margin:8px 0;flex-wrap:wrap;
-  }
-  .item .name{
-    width:110px;min-width:100px;
-    background:#2b2250;border:1px solid rgba(180,140,255,.35);
-    border-radius:12px;padding:10px 10px;color:#fff;outline:none;
-  }
-  .item .url{flex:1;}
+  /* Campos nombre + url */
+  .item .name{
+    width:110px;min-width:100px;
+    background:#2b2250;border:1px solid rgba(180,140,255,.35);
+    border-radius:12px;padding:10px 10px;color:#fff;outline:none;
+  }
+  .item .url{flex:1;}
 
-  .btn{
-    position:relative;border:none;border-radius:12px;padding:10px 12px;
-    color:#fff;cursor:pointer;outline:none;background:var(--btn-bg);
-    white-space:nowrap;font-weight:600;letter-spacing:.2px;text-align:center;
-    box-shadow:0 6px 18px rgba(40,0,120,.22);z-index:0;
-  }
-  .btn:hover{filter:brightness(1.08)}
-  .btn > *{position:relative;z-index:2}
-  .btn::before{content:"";position:absolute;inset:0;border-radius:12px;z-index:1;background:transparent;}
-  .btn--thin::before{
-    inset:-1px;border-radius:13px;
-    background:conic-gradient(from 45deg,var(--neonA)0%,var(--neonB)18%,var(--neonA)36%,var(--neonA)100%);
-    -webkit-mask:linear-gradient(#000 0 0) content-box,linear-gradient(#000 0 0);
-    -webkit-mask-composite:xor;mask-composite:exclude;padding:1px;
-    filter:saturate(90%) blur(.15px) opacity(.85);
-  }
+  .btn{
+    position:relative;border:none;border-radius:12px;padding:10px 12px;
+    color:#fff;cursor:pointer;outline:none;background:var(--btn-bg);
+    white-space:nowrap;font-weight:600;letter-spacing:.2px;text-align:center;
+    box-shadow:0 6px 18px rgba(40,0,120,.22);z-index:0;
+  }
+  .btn:hover{filter:brightness(1.08)}
+  .btn > *{position:relative;z-index:2}
+  .btn::before{content:"";position:absolute;inset:0;border-radius:12px;z-index:1;background:transparent;}
+  .btn--thin::before{
+    inset:-1px;border-radius:13px;
+    background:conic-gradient(from 45deg,var(--neonA)0%,var(--neonB)18%,var(--neonA)36%,var(--neonA)100%);
+    -webkit-mask:linear-gradient(#000 0 0) content-box,linear-gradient(#000 0 0);
+    -webkit-mask-composite:xor;mask-composite:exclude;padding:1px;
+    filter:saturate(90%) blur(.15px) opacity(.85);
+  }
 
-  .actions-top{display:flex;gap:6px;margin:8px 0 6px;justify-content:space-between;flex-wrap:nowrap;}
-  .actions-bottom{display:flex;justify-content:center;margin:18px 0 6px;position:relative;}
-  #msg.ok{color:#90f0b0}#msg.err{color:#fca5a5}
-  #list{margin-top:24px;}
-  .save-wrap{display:flex;justify-content:center;margin:16px 0 6px}
+  .actions-top{display:flex;gap:6px;margin:8px 0 6px;justify-content:space-between;flex-wrap:nowrap;}
+  .actions-bottom{display:flex;justify-content:center;margin:18px 0 6px;position:relative;}
+  #msg.ok{color:#90f0b0}#msg.err{color:#fca5a5}
+  #list{margin-top:24px;}
+  .save-wrap{display:flex;justify-content:center;margin:16px 0 6px}
 
-  /* Botón de estadísticas (entre tarjetas) */
-  .stats-card{
-    margin:18px auto;
-    padding:14px;
-    display:flex;align-items:center;justify-content:center;gap:10px;
-    cursor:pointer;user-select:none;
-    background:linear-gradient(var(--card),var(--card)) padding-box,
-               linear-gradient(145deg,var(--edge1),var(--edge2),var(--edge1)) border-box;
-    border:1px solid transparent;border-radius:20px;
-    box-shadow:0 12px 40px rgba(0,0,0,.45);
-  }
-  .stats-card:hover{filter:brightness(1.05);transform:translateY(-1px);transition:.18s}
-  .stats-icon{
-    width:20px;height:20px;border-radius:50%;
-    background:conic-gradient(from 0deg,#ffffff 0deg 110deg,#b985ff 110deg 360deg);
-  }
+  /* Botón de estadísticas (entre tarjetas) */
+  .stats-card{
+    margin:18px auto;
+    padding:14px;
+    display:flex;align-items:center;justify-content:center;gap:10px;
+    cursor:pointer;user-select:none;
+    background:linear-gradient(var(--card),var(--card)) padding-box,
+               linear-gradient(145deg,var(--edge1),var(--edge2),var(--edge1)) border-box;
+    border:1px solid transparent;border-radius:20px;
+    box-shadow:0 12px 40px rgba(0,0,0,.45);
+  }
+  .stats-card:hover{filter:brightness(1.05);transform:translateY(-1px);transition:.18s}
+  .stats-icon{
+    width:20px;height:20px;border-radius:50%;
+    background:conic-gradient(from 0deg,#ffffff 0deg 110deg,#b985ff 110deg 360deg);
+  }
 
-  @media(max-width:420px){
-    .logo{width:216px;margin:8px auto -38px}
-    .card-inner{padding:14px 10px}
-    .btn{font-size:12.5px}
-  }
+  @media(max-width:420px){
+    .logo{width:216px;margin:8px auto -38px}
+    .card-inner{padding:14px 10px}
+    .btn{font-size:12.5px}
+  }
 </style>
 </head>
 <body>
 <canvas id="bg"></canvas>
 
 <div class="shell">
-  <div class="logo-wrap">
-    <img class="logo" src="/insomnia-logo.png" alt="Insomnia Logo">
-  </div>
+  <div class="logo-wrap">
+    <img class="logo" src="/insomnia-logo.png" alt="Insomnia Logo">
+  </div>
 
-    <div class="card">
-    <div class="card-inner">
-      <h1>PANEL ADMIN</h1>
-      <div class="actions-top">
-        <button class="btn btn--thin btn--sm" id="btnView">Ver lista</button>
-        <button class="btn btn--thin btn--sm" id="btnReset">Borrar lista</button>
-        <button class="btn btn--thin btn--sm" id="btnRot">Resetear rotación</button>
-      </div>
+  <!-- Tarjeta principal -->
+  <div class="card">
+    <div class="card-inner">
+      <h1>PANEL ADMIN</h1>
+      <div class="actions-top">
+        <button class="btn btn--thin btn--sm" id="btnView">Ver lista</button>
+        <button class="btn btn--thin btn--sm" id="btnReset">Borrar lista</button>
+        <button class="btn btn--thin btn--sm" id="btnRot">Resetear rotación</button>
+      </div>
 
-      <div class="actions-bottom">
-        <button class="btn btn--bold btn--main" id="btnAdd">AGREGAR CAJERA</button>
-      </div>
+      <div class="actions-bottom">
+        <button class="btn btn--bold btn--main" id="btnAdd">AGREGAR CAJERA</button>
+      </div>
 
-      <div id="list"></div>
-      <div class="save-wrap">
-        <button class="btn btn--thin" id="btnSaveFinal">Guardar</button>
-      </div>
-      <p id="msg"></p>
-    </div>
-    <div class="stats-card" id="btnStats">
-      <div class="stats-icon"></div>
-      <span>Estadísticas</span>
-    </div>
-  </div>
+      <div id="list"></div>
+      <div class="save-wrap">
+        <button class="btn btn--thin" id="btnSaveFinal">Guardar</button>
+      </div>
+      <p id="msg"></p>
+    </div>
+  </div>
 
-    <div class="card-mini">
-    <div class="mini-inner">
-      <p style="text-align:center;color:#dcd2ff;margin-bottom:10px;">Configuración</p>
+  <!-- Botón Estadísticas -->
+  <div class="stats-card" id="btnStats">
+    <div class="stats-icon"></div>
+    <span>Estadísticas</span>
+  </div>
 
-      <div class="row">
-        <label style="align-self:center;min-width:110px;color:#d7ccff;">Rotar cada</label>
-        <input id="blocksize" type="number" min="1" max="20" step="1" placeholder="2" style="max-width:120px">
-        <label style="align-self:center;color:#d7ccff;min-width:60px">clicks</label>
-        <button class="btn btn--thin btn--sm" id="btnSaveBS">Guardar</button>
-      </div>
+  <!-- Mini tarjeta inferior -->
+  <div class="card-mini">
+    <div class="mini-inner">
+      <p style="text-align:center;color:#dcd2ff;margin-bottom:10px;">Configuración</p>
 
-      <div class="row">
-        <input id="token" type="text" placeholder="tok99-2025">
-        <button class="btn btn--thin btn--sm" id="btnSaveToken">Guardar token</button>
-      </div>
-    </div>
-  </div>
+      <div class="row">
+        <label style="align-self:center;min-width:110px;color:#d7ccff;">Rotar cada</label>
+        <input id="blocksize" type="number" min="1" max="20" step="1" placeholder="2" style="max-width:120px">
+        <label style="align-self:center;color:#d7ccff;min-width:60px">clicks</label>
+        <button class="btn btn--thin btn--sm" id="btnSaveBS">Guardar</button>
+      </div>
+
+      <div class="row">
+        <input id="token" type="text" placeholder="tok99-2025">
+        <button class="btn btn--thin btn--sm" id="btnSaveToken">Guardar token</button>
+      </div>
+    </div>
+  </div>
 </div>
 
 <script>
-// ===== Fondo partículas (Tu código original) =====
+// ===== Fondo partículas =====
 const c=document.getElementById("bg"),x=c.getContext("2d");
 let P=[];function rs(){c.width=innerWidth;c.height=innerHeight}addEventListener("resize",rs);rs();
 for(let i=0;i<90;i++)P.push({x:Math.random()*c.width,y:Math.random()*c.height,vx:(Math.random()-.5)*.28,vy:(Math.random()-.5)*.28,r:Math.random()*2+.7});
@@ -167,30 +168,20 @@ requestAnimationFrame(anim);})();
 const $=s=>document.querySelector(s);
 const list=$("#list"),msg=$("#msg"),tokenInput=$("#token"),bsInput=$("#blocksize");
 
-/**
- * FUNCIÓN CORREGIDA
- * 1. Elimina la línea 'if(typeof val==="string") val={name:"",url:val};' que causó el [object Object].
- * 2. Asegura que val.name y val.url siempre se usen como strings o cadena vacía.
- */
 function row(val={name:"",url:""}) {
-  // **CORRECCIÓN:** Se eliminó la línea que convertía val a objeto si era string,
-  // y se utiliza la desestructuración de valores con un fallback a string vacío.
-  const name = (val && typeof val.name === 'string') ? val.name : '';
-  const url = (val && typeof val.url === 'string') ? val.url : '';
-  
-  const d=document.createElement("div");d.className="item"; // Usamos 'item' que tiene el display:flex
-  const iName=document.createElement("input");iName.type="text";iName.placeholder="Nombre";iName.className="name";iName.value=name;
-  const iUrl=document.createElement("input");iUrl.type="text";iUrl.placeholder="https://wa.me/...";iUrl.className="url";iUrl.value=url;
-  const b=document.createElement("button");b.className="btn btn--thin btn--sm";b.textContent="Borrar";b.onclick=()=>d.remove();
-  d.append(iName,iUrl,b);list.append(d);
+  if(typeof val==="string") val={name:"",url:val};
+  const d=document.createElement("div");d.className="item";
+  const iName=document.createElement("input");iName.type="text";iName.placeholder="Nombre";iName.className="name";iName.value=val.name||"";
+  const iUrl=document.createElement("input");iUrl.type="text";iUrl.placeholder="https://wa.me/...";iUrl.className="url";iUrl.value=val.url||"";
+  const b=document.createElement("button");b.className="btn btn--thin btn--sm";b.textContent="Borrar";b.onclick=()=>d.remove();
+  d.append(iName,iUrl,b);list.append(d);
 }
-
 function values(){
-  return [...list.querySelectorAll(".item")].map(el=>{
-    const name=el.querySelector(".name")?.value.trim()||"";
-    const url=el.querySelector(".url")?.value.trim()||"";
-    return url?{name,url}:null;
-  }).filter(Boolean);
+  return [...list.querySelectorAll(".item")].map(el=>{
+    const name=el.querySelector(".name")?.value.trim()||"";
+    const url=el.querySelector(".url")?.value.trim()||"";
+    return url?{name,url}:null;
+  }).filter(Boolean);
 }
 function show(t,ok=1){msg.textContent=t;msg.className=ok?"ok":"err"}
 
@@ -199,11 +190,68 @@ $("#btnSaveToken").onclick=()=>{localStorage.setItem("adm_tok",tokenInput.value.
 window.onload=async()=>{const t=localStorage.getItem("adm_tok");if(t)tokenInput.value=t;if(t){await loadBlockSize(t);}};
 
 $("#btnView").onclick=async()=>{
-  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
-  try{
-    show("Cargando...");
-    const r=await fetch(`/api/admin?token=${encodeURIComponent(t)}&get=1`);
-    const j=await r.json();
-    list.innerHTML="";(j.links||[]).forEach(o=>row(o));
-    if((j.links||[]).length===0)row();
-    show
+  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
+  try{
+    show("Cargando...");
+    const r=await fetch(`/api/admin?token=${encodeURIComponent(t)}&get=1`);
+    const j=await r.json();
+    list.innerHTML="";(j.links||[]).forEach(o=>row(o));
+    if((j.links||[]).length===0)row();
+    show("Lista cargada");
+  }catch(e){show("Error al cargar",0);}
+};
+
+$("#btnReset").onclick=async()=>{
+  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
+  try{
+    const r=await fetch(`/api/admin?token=${encodeURIComponent(t)}&reset=1`);
+    const j=await r.json();list.innerHTML="";row();
+    show(j.ok?"Lista borrada":"Error",j.ok);
+  }catch(e){show("Error",0);}
+};
+
+$("#btnRot").onclick=async()=>{
+  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
+  try{
+    const r=await fetch(`/api/rotate-reset?token=${encodeURIComponent(t)}`);
+    const j=await r.json();show(j.ok?"Rotación reiniciada":"Error",j.ok);
+  }catch(e){show("Error",0);}
+};
+
+$("#btnAdd").onclick=()=>row();
+
+$("#btnSaveFinal").onclick=async()=>{
+  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
+  const vals=values();if(!vals.length)return show("Nada que guardar",0);
+  try{
+    show("Guardando...");
+    const r=await fetch(`/api/admin-post?token=${encodeURIComponent(t)}`,{
+      method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(vals)
+    });
+    const j=await r.json();show(j.ok?`Guardado (${j.saved})`:"Error al guardar",j.ok);
+  }catch(e){show("Error al guardar",0);}
+};
+
+async function loadBlockSize(t){
+  try{
+    const r=await fetch(`/api/blocksize?token=${encodeURIComponent(t)}&get=1`);
+    const j=await r.json();if(j.ok&&j.value!==undefined)bsInput.value=j.value;
+  }catch(e){}
+}
+
+$("#btnSaveBS").onclick=async()=>{
+  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
+  const v=Number(bsInput.value);
+  if(!Number.isInteger(v)||v<1||v>20)return show("Valor inválido (1 a 20)",0);
+  try{
+    const r=await fetch(`/api/blocksize?token=${encodeURIComponent(t)}`,{
+      method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({value:v})
+    });
+    const j=await r.json();show(j.ok?`Block size guardado (${v})`:"Error al guardar",j.ok);
+  }catch(e){show("Error al guardar",0);}
+};
+
+$("#btnStats").onclick=()=>show("📊 Próximamente: Conteo de mensajes y métricas.",1);
+</script>
+</body>
+</html>
