--- a/public/admin.html
+++ b/public/admin.html
@@ -10,7 +10,9 @@
     --card:#1c1433f0; --edge1:rgba(174,143,255,.16); --edge2:rgba(255,255,255,.55);
     --text:#ffffff; --muted:#c9c0f2; --btn-bg:#1e1935;
     --neonA:#b985ff; --neonB:#efe6ff; --pulse:#7f5cff;
+    --violet-soft:#7d55ff;
   }
+
   html,body{
     height:100%;margin:0;color:var(--text);
     font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial;
@@ -42,13 +44,16 @@
   input::placeholder{color:#9a8ccc}
 
   /* Campos nombre + url */
+  .item{display:flex;gap:8px;margin:6px 0;align-items:center}
   .item .name{
-    width:110px;min-width:100px;
+    width:112px;min-width:108px; /* igual que btn--sm */
     background:#2b2250;border:1px solid rgba(180,140,255,.35);
     border-radius:12px;padding:10px 10px;color:#fff;outline:none;
   }
   .item .url{flex:1;}
+  .item .btn{min-width:auto;padding:10px 12px}
 
+  /* Botones base */
   .btn{
     position:relative;border:none;border-radius:12px;padding:10px 12px;
     color:#fff;cursor:pointer;outline:none;background:var(--btn-bg);
@@ -65,20 +70,56 @@
     -webkit-mask-composite:xor;mask-composite:exclude;padding:1px;
     filter:saturate(90%) blur(.15px) opacity(.85);
   }
+  .btn--sm{ padding:10px 10px; font-size:12.5px; min-width:108px; }
 
-  .actions-top{display:flex;gap:6px;margin:8px 0 6px;justify-content:space-between;flex-wrap:nowrap;}
+  /* Top actions: 3 botones parejos y responsivos */
+  .actions-top{
+    display:flex; gap:8px; margin:8px 0 6px;
+  }
+  .actions-top .btn{
+    flex:1; /* todos mismo ancho */
+    display:flex; align-items:center; justify-content:center;
+    height:40px; /* mismo alto */
+  }
+
+  /* Botón principal “AGREGAR CAJERA” con borde y pulso */
   .actions-bottom{display:flex;justify-content:center;margin:18px 0 6px;position:relative;}
+  .btn--main{
+    font-size:15px; padding:12px 16px; min-width:220px;
+    background:#231a44;
+    box-shadow:0 10px 28px rgba(127,92,255,.35), 0 0 22px rgba(127,92,255,.22);
+  }
+  .btn--main::before{
+    inset:-2px;border-radius:14px;
+    background:conic-gradient(from 30deg, var(--neonA) 0%, var(--neonB) 14%, var(--neonA) 28%, var(--neonA) 100%);
+    -webkit-mask: linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0);
+    -webkit-mask-composite:xor; mask-composite:exclude;
+    padding:2px; filter:saturate(120%) blur(.35px) opacity(.95);
+  }
+  .btn--main::after{
+    content:""; position:absolute; z-index:0;
+    inset:-16px; border-radius:28px;
+    background: radial-gradient(45% 70% at 50% 50%,
+      rgba(127,92,255,.55),
+      rgba(127,92,255,.22) 55%,
+      transparent 75%);
+    filter:blur(16px);
+    animation:breath 2.8s ease-in-out infinite;
+  }
+  @keyframes breath{0%,100%{transform:scale(0.96);opacity:.85}50%{transform:scale(1.06);opacity:1}}
+
   #msg.ok{color:#90f0b0}#msg.err{color:#fca5a5}
   #list{margin-top:24px;}
   .save-wrap{display:flex;justify-content:center;margin:16px 0 6px}
+  #btnSaveFinal{ min-width:180px; }
 
-  /* Botón de estadísticas (entre tarjetas) */
+  /* Botón de estadísticas (entre tarjetas) — un poco más claro */
   .stats-card{
     margin:18px auto;
     padding:14px;
     display:flex;align-items:center;justify-content:center;gap:10px;
     cursor:pointer;user-select:none;
-    background:linear-gradient(var(--card),var(--card)) padding-box,
+    background:linear-gradient(180deg, rgba(139,109,255,.22), rgba(139,109,255,.08)) padding-box,
                linear-gradient(145deg,var(--edge1),var(--edge2),var(--edge1)) border-box;
     border:1px solid transparent;border-radius:20px;
     box-shadow:0 12px 40px rgba(0,0,0,.45);
@@ -93,6 +134,8 @@
     .logo{width:216px;margin:8px auto -38px}
     .card-inner{padding:14px 10px}
     .btn{font-size:12.5px}
+    .actions-top .btn{height:40px}
+    .item .name{min-width:100px;width:100px}
   }
 </style>
 </head>
@@ -108,6 +151,7 @@
   <div class="card">
     <div class="card-inner">
       <h1>PANEL ADMIN</h1>
+
       <div class="actions-top">
         <button class="btn btn--thin btn--sm" id="btnView">Ver lista</button>
         <button class="btn btn--thin btn--sm" id="btnReset">Borrar lista</button>
@@ -115,7 +159,7 @@
       </div>
 
       <div class="actions-bottom">
-        <button class="btn btn--bold btn--main" id="btnAdd">AGREGAR CAJERA</button>
+        <button class="btn btn--main" id="btnAdd">AGREGAR CAJERA</button>
       </div>
 
       <div id="list"></div>
@@ -126,7 +170,7 @@
     </div>
   </div>
 
-  <!-- Botón Estadísticas -->
+  <!-- Botón Estadísticas (entre tarjetas) -->
   <div class="stats-card" id="btnStats">
     <div class="stats-icon"></div>
     <span>Estadísticas</span>
@@ -238,7 +282,6 @@ async function loadBlockSize(t){
     const j=await r.json();if(j.ok&&j.value!==undefined)bsInput.value=j.value;
   }catch(e){}
 }
-
 $("#btnSaveBS").onclick=async()=>{
   const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
   const v=Number(bsInput.value);
