--- a/public/admin.html
+++ b/public/admin.html
@@ -9,7 +9,7 @@
     --bg1:#4b0082; --bg2:#000000; --particle:#c7b3ff;
     --card:#1c1433f0; --edge1:rgba(174,143,255,.16); --edge2:rgba(255,255,255,.55);
     --text:#ffffff; --muted:#c9c0f2; --btn-bg:#1e1935;
-    --neonA:#b985ff; --neonB:#efe6ff; --pulse:#7f5cff;
+    --neonA:#b985ff; --neonB:#efe6ff;
   }
 
   html,body{
@@ -18,13 +18,14 @@
     background:radial-gradient(circle at 30% -10%,var(--bg1),var(--bg2));
     overflow:auto;
   }
+
   canvas{position:fixed;inset:0;width:100%;height:100%;z-index:0}
   .shell{position:relative;z-index:2;max-width:760px;margin:4px auto 32px;padding:0 14px}
   .logo-wrap{display:flex;justify-content:center}
   .logo{width:240px;display:block;filter:drop-shadow(0 6px 18px rgba(115,90,255,.35));margin:10px auto -36px;}
 
   .card,.card-mini{
-    position:relative;z-index:1;margin:0 auto;
+    position:relative;margin:0 auto;
     background:linear-gradient(var(--card),var(--card)) padding-box,
                linear-gradient(145deg,var(--edge1),var(--edge2),var(--edge1)) border-box;
     border:1px solid transparent;border-radius:20px;
@@ -32,26 +33,9 @@
   }
   .card-inner{padding:16px 14px}
   .mini-inner{padding:14px 14px}
+
   h1{text-align:center;margin:2px 0 8px;font-size:24px;letter-spacing:.4px}
   p,small{color:var(--muted);text-align:center;margin:0}
-
-  .row{display:flex;gap:8px;margin:8px 0;flex-wrap:wrap}
-  input[type=text],input[type=number]{
-    flex:1;background:#2b2250;border:1px solid rgba(180,140,255,.35);
-    border-radius:12px;padding:10px 12px;color:#fff;outline:none;
-  }
-  input::placeholder{color:#9a8ccc}
-
-  /* Ítems de lista (Nombre + WaLink + Borrar) */
-  .item{display:flex;gap:8px;margin:6px 0;align-items:center}
-  .item .name{
-    width:108px;min-width:108px;
-    background:#2b2250;border:1px solid rgba(180,140,255,.35);
-    border-radius:12px;padding:10px;color:#fff;outline:none;
-    height:40px; /* igual alto que los botones */
-  }
-  .item .url{flex:1}
-  .item .btn{min-width:auto;padding:10px 12px;height:40px}
 
   /* Botones base */
   .btn{
@@ -59,11 +43,14 @@
     color:#fff;cursor:pointer;outline:none;background:var(--btn-bg);
     white-space:nowrap;font-weight:600;letter-spacing:.2px;text-align:center;
     box-shadow:0 6px 18px rgba(40,0,120,.22);z-index:0;
+    display:flex;align-items:center;justify-content:center;
+    height:36px; /* altura uniforme */
+    font-size:12.5px;
   }
   .btn:hover{filter:brightness(1.08)}
-  .btn > *{position:relative;z-index:2}
-  .btn::before{content:"";position:absolute;inset:0;border-radius:12px;z-index:1;background:transparent;}
-
+  .btn::before{
+    content:"";position:absolute;inset:0;border-radius:12px;z-index:1;background:transparent;
+  }
   .btn--thin::before{
     inset:-1px;border-radius:13px;
     background:conic-gradient(from 45deg,var(--neonA)0%,var(--neonB)18%,var(--neonA)36%,var(--neonA)100%);
@@ -71,15 +58,12 @@
     -webkit-mask-composite:xor;mask-composite:exclude;padding:1px;
     filter:saturate(90%) blur(.15px) opacity(.85);
   }
-  .btn--sm{ padding:10px 10px; font-size:12.5px; min-width:108px; height:40px; }
 
-  /* Top actions: parejos y responsivos */
-  .actions-top{display:flex; gap:8px; margin:8px 0 6px;}
-  .actions-top .btn{flex:1;display:flex;align-items:center;justify-content:center}
-  /* Texto más chico SOLO para “Resetear rotación” */
-  #btnRot{font-size:11.5px}
+  /* Top actions parejos */
+  .actions-top{display:grid;grid-template-columns:1fr 1fr 1fr;gap:8px;margin:8px 0 6px}
+  #btnRot{font-size:11.4px} /* texto un pelín más chico */
 
-  /* Botón principal “AGREGAR CAJERA” con borde y pulso */
+  /* Botón principal con borde + glow */
   .actions-bottom{display:flex;justify-content:center;margin:18px 0 6px;position:relative;}
   .btn--main{
     font-size:15px; padding:12px 16px; min-width:220px;
@@ -105,12 +89,28 @@
   }
   @keyframes breath{0%,100%{transform:scale(0.96);opacity:.85}50%{transform:scale(1.06);opacity:1}}
 
-  #msg.ok{color:#90f0b0}#msg.err{color:#fca5a5}
-  #list{margin-top:24px;}
-  .save-wrap{display:flex;justify-content:center;margin:16px 0 6px}
+  /* Lista de cajeras: grid para simetría */
+  #list{margin-top:18px}
+  .item{
+    display:grid;
+    grid-template-columns: 100px 1fr 108px; /* Nombre chico | URL flexible | Borrar */
+    gap:8px;align-items:center;margin:6px 0;
+  }
+  .item input{
+    background:#2b2250;border:1px solid rgba(180,140,255,.35);
+    border-radius:12px;color:#fff;outline:none;height:36px;
+  }
+  .item .name{
+    width:100%;min-width:0;padding:8px 10px;font-size:12.5px; /* chico */
+  }
+  .item .url{
+    width:100%;min-width:0;padding:8px 12px;font-size:13px;
+  }
+
+  .save-wrap{display:flex;justify-content:center;margin:14px 0 6px}
   #btnSaveFinal{ min-width:180px; }
 
-  /* Botón “Estadísticas” igual que una tarjeta */
+  /* Botón Estadísticas = tarjeta */
   .stats-card{
     margin:18px auto;
     padding:14px;
@@ -129,22 +129,26 @@
 
   /* Mini tarjeta inferior */
   .card-mini{margin-top:16px}
-  .mini-inner{padding:14px 14px}
   .mini-title{margin:0 0 8px;text-align:center;font-size:14px;color:#dcd2ff}
 
-  /* Campo numérico “Rotar cada” más angosto */
+  /* Config row en UNA línea: Rotar cada | [num pequeño] | clicks | Guardar */
+  .config-row{
+    display:grid;
+    grid-template-columns: auto 64px auto min-content; /* etiqueta | número chico | etiqueta | botón */
+    align-items:center;gap:8px;margin:8px 0;
+  }
   #blocksize{
-    max-width:72px; /* solo cambiamos esto: más compacto */
-    padding:8px 10px;
-    text-align:center;
+    max-width:64px; padding:6px 8px; text-align:center; height:36px; font-size:13px;
+    background:#2b2250;border:1px solid rgba(180,140,255,.35);border-radius:12px;color:#fff;outline:none;
   }
 
-  @media(max-width:420px){
+  #msg.ok{color:#90f0b0}#msg.err{color:#fca5a5}
+
+  @media (max-width:420px){
     .logo{width:216px;margin:8px auto -38px}
     .card-inner{padding:14px 10px}
-    .btn{font-size:12.5px}
-    .actions-top .btn{height:40px}
-    .item .name{min-width:108px;width:108px;height:40px}
+    .mini-inner{padding:12px 10px}
+    .actions-top{grid-template-columns:1fr 1fr 1fr}
   }
 </style>
 </head>
@@ -162,9 +166,9 @@
       <h1>PANEL ADMIN</h1>
 
       <div class="actions-top">
-        <button class="btn btn--thin btn--sm" id="btnView">Ver lista</button>
-        <button class="btn btn--thin btn--sm" id="btnReset">Borrar lista</button>
-        <button class="btn btn--thin btn--sm" id="btnRot">Resetear rotación</button>
+        <button class="btn btn--thin" id="btnView">Ver lista</button>
+        <button class="btn btn--thin" id="btnReset">Borrar lista</button>
+        <button class="btn btn--thin" id="btnRot">Resetear rotación</button>
       </div>
 
       <div class="actions-bottom">
@@ -172,41 +176,43 @@
       </div>
 
       <div id="list"></div>
+
       <div class="save-wrap">
         <button class="btn btn--thin" id="btnSaveFinal">Guardar</button>
       </div>
+
       <p id="msg"></p>
     </div>
   </div>
 
-  <!-- Botón Estadísticas (entre tarjetas) -->
+  <!-- Botón Estadísticas (igual que tarjeta) -->
   <div class="stats-card" id="btnStats">
     <div class="stats-icon"></div>
     <span>Estadísticas</span>
   </div>
 
-  <!-- Mini tarjeta inferior -->
+  <!-- Mini tarjeta inferior (Configuración) -->
   <div class="card-mini">
     <div class="mini-inner">
       <p class="mini-title">Configuración</p>
 
-      <div class="row">
-        <label style="align-self:center;min-width:110px;color:#d7ccff;">Rotar cada</label>
+      <div class="config-row">
+        <label style="color:#d7ccff">Rotar cada</label>
         <input id="blocksize" type="number" min="1" max="20" step="1" placeholder="2">
-        <label style="align-self:center;color:#d7ccff;min-width:60px">clicks</label>
-        <button class="btn btn--thin btn--sm" id="btnSaveBS">Guardar</button>
+        <label style="color:#d7ccff">clicks</label>
+        <button class="btn btn--thin" id="btnSaveBS">Guardar</button>
       </div>
 
       <div class="row">
         <input id="token" type="text" placeholder="tok99-2025">
-        <button class="btn btn--thin btn--sm" id="btnSaveToken">Guardar token</button>
+        <button class="btn btn--thin" id="btnSaveToken">Guardar token</button>
       </div>
     </div>
   </div>
 </div>
 
 <script>
-// ===== Fondo partículas =====
+/* Fondo partículas */
 const c=document.getElementById("bg"),x=c.getContext("2d");
 let P=[];function rs(){c.width=innerWidth;c.height=innerHeight}addEventListener("resize",rs);rs();
 for(let i=0;i<90;i++)P.push({x:Math.random()*c.width,y:Math.random()*c.height,vx:(Math.random()-.5)*.28,vy:(Math.random()-.5)*.28,r:Math.random()*2+.7});
@@ -217,7 +223,7 @@ x.fillStyle=grad;x.fillRect(0,0,c.width,c.height);x.fillStyle=cs('--particle');
 for(const p of P){p.x+=p.vx;p.y+=p.vy;if(p.x<0||p.x>c.width)p.vx*=-1;if(p.y<0||p.y>c.height)p.vy*=-1;x.beginPath();x.arc(p.x,p.y,p.r,0,6.283);x.fill();}
 requestAnimationFrame(anim);})();
 
-// ===== Panel =====
+/* Lógica panel (igual que tenías) */
 const $=s=>document.querySelector(s);
 const list=$("#list"),msg=$("#msg"),tokenInput=$("#token"),bsInput=$("#blocksize");
 
@@ -226,9 +232,10 @@ function row(val={name:"",url:""}) {
   const d=document.createElement("div");d.className="item";
   const iName=document.createElement("input");iName.type="text";iName.placeholder="Nombre";iName.className="name";iName.value=val.name||"";
   const iUrl=document.createElement("input");iUrl.type="text";iUrl.placeholder="https://wa.me/...";iUrl.className="url";iUrl.value=val.url||"";
-  const b=document.createElement("button");b.className="btn btn--thin btn--sm";b.textContent="Borrar";b.onclick=()=>d.remove();
+  const b=document.createElement("button");b.className="btn btn--thin";b.textContent="Borrar";b.onclick=()=>d.remove();
   d.append(iName,iUrl,b);list.append(d);
 }
+
 function values(){
   return [...list.querySelectorAll(".item")].map(el=>{
     const name=el.querySelector(".name")?.value.trim()||"";
